# ke-eprijzen-telegram

./: .gitignore  Dockerfile  Dockerraspfile  README.md  build_run_dock.sh  pixi.toml  pyproject.toml
src/: main.py
src/config/: config_sample.ini
src/models/: api_requests.py  prices.py  system.py  users.py
src/resources/: dispatcher.py  dispatcher_functions.py  help.py  onderhoud.py  prices.py  stuur_bericht.py  system.py  user.py
